
[package]
name = "veseliy_pjt_usb"
build = "src/resources/build.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
byteorder = {version = "1", features = ["i128"]}
# Public
packed_struct = "0.10.0"
iced = { version = "0.8", features = ["debug", "svg", "iced_wgpu", "iced_glow", "iced_glutin"] }
iced_wgpu  = "0.9"
iced_native = "0.9.0"
iced_graphics = "0.7.0"
image = "0.24.5"

[dependencies.rusb] 
git = "https://github.com/a1ien/rusb"

[dependencies.iced_aw] 
git = "https://github.com/iced-rs/iced_aw"
rev = "406131b" #latest commit as of 18.02.2023 v0.3.0
default-features = false 
features = [ "menu", "quad", "icon_text", "tabs", "grid"]

[build-dependencies]
winresource = "0.1.14"

[package.metadata.winresource]
ProductName = "open_mc56f_usbdm"
LegalCopyright = "GPL v2 © 2022"

