
[package]
name = "veseliy_pjt_usb"
build = "src/resources/build.rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
byteorder = {version = "1", features = ["i128"]}
# Public
packed_struct = "0.10.0"
iced = { version = "0.8", features = ["debug", "svg", "glow", "iced_glutin", "image"] }
iced_glow = "0.7.0"
iced_native = "0.9.0"
iced_graphics = "0.7.0"
image = "0.24.5"
native-dialog = { git = "https://github.com/balthild/native-dialog-rs" }
async-trait ="0.1.64"

[dependencies.rusb] 
git = "https://github.com/a1ien/rusb"
rev = "df483fa" #latest commit as of 02.03.2023 v0.9.1

[dependencies.iced_aw] 
git = "https://github.com/iced-rs/iced_aw"
rev = "e100ee0" #latest commit as of 02.03.2023 v0.4.1
default-features = false 
features = ["menu", "quad", "icon_text", "tabs", "grid", "card", "modal"]

[build-dependencies]
winresource = "0.1.14"

[package.metadata.winresource]
ProductName = "open_mc56f_usbdm"
LegalCopyright = "GPL v2 © 2022"

