
[package]
name = "usbdm_rs"
build = "src/build.rs"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
byteorder = {version = "1", features = ["i128"]}
# Public
packed_struct = "0.10.0"
iced = { version = "0.8", features = ["debug", "svg", "iced_wgpu", "iced_glow", "iced_glutin", "image"] }
iced_wgpu  = "0.9"
iced_native = "0.9.0"
iced_graphics = "0.7.0"
image = "0.24.5"
async-trait ="0.1.64"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
bincode = "1.3.3"

[dependencies.native-dialog]
git = "https://github.com/balthild/native-dialog-rs"
rev = "d2ddd44" #latest commit as of 08.03.2023 v0.6.3

[dependencies.rusb] 
git = "https://github.com/a1ien/rusb"
rev = "df483fa" #latest commit as of 08.03.2023 v0.9.1

[dependencies.iced_aw] 
git = "https://github.com/iced-rs/iced_aw"
rev = "8fc1eed" #latest commit as of 08.03.2023 v0.4.1
default-features = false 
features = ["menu", "quad", "icon_text", "tabs", "grid", "card", "modal"]

[build-dependencies]
winresource = "0.1.14"
static_vcruntime = "2.0"

[package.metadata.winresource]
ProductName = "open_mc56f_usbdm"
LegalCopyright = "GPL v2 © 2022"

